Added text test examples to logic rules for testing contrast

--- a/views/lexicon/patterns/rules/logic-based.html.twig
+++ b/views/lexicon/patterns/rules/logic-based.html.twig
@@ -72,6 +72,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose condition',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose condition',
@@ -96,6 +97,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose logic',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'is',
@@ -116,6 +118,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose value',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose value',
@@ -151,6 +154,7 @@
                             'id': 'guid-' ~ random(),
                             'label': 'Choose condition',
                             'show-label': false,
+                            'error': 'Please complete this field',
                             'options': [
                                 {
                                     'label': 'Choose condition',
@@ -175,6 +179,7 @@
                             'id': 'guid-' ~ random(),
                             'label': 'Choose logic',
                             'show-label': false,
+                            'error': 'Please complete this field',
                             'options': [
                                 {
                                     'label': 'is',
@@ -195,6 +200,7 @@
                             'id': 'guid-' ~ random(),
                             'label': 'Choose value',
                             'show-label': false,
+                            'error': 'Please complete this field',
                             'options': [
                                 {
                                     'label': 'Choose value',
@@ -229,6 +235,7 @@
                             'id': 'guid-' ~ random(),
                             'label': 'Choose condition',
                             'show-label': false,
+                            'error': 'Please complete this field',
                             'options': [
                                 {
                                     'label': 'Choose condition',
@@ -253,6 +260,7 @@
                             'id': 'guid-' ~ random(),
                             'label': 'Choose logic',
                             'show-label': false,
+                            'error': 'Please complete this field',
                             'options': [
                                 {
                                     'label': 'is',
@@ -273,6 +281,7 @@
                             'id': 'guid-' ~ random(),
                             'label': 'Choose value',
                             'show-label': false,
+                            'error': 'Please complete this field',
                             'options': [
                                 {
                                     'label': 'Choose value',
@@ -314,6 +323,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose condition',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose condition',
@@ -338,6 +348,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose logic',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'is',
@@ -358,6 +369,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose value',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose value',
@@ -401,6 +413,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose return value',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose return value',
@@ -440,6 +453,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose condition',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose condition',
@@ -464,6 +478,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose logic',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'is',
@@ -484,6 +499,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose value',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose value',
@@ -527,6 +543,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose return value',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose return value',
@@ -566,6 +583,7 @@
                         'id': 'guid-' ~ random(),
                         'label': 'Choose return value',
                         'show-label': false,
+                        'error': 'Please complete this field',
                         'options': [
                             {
                                 'label': 'Choose return value',
