--- a/views/lexicon/patterns/settings-panel/tab.html.twig
+++ b/views/lexicon/patterns/settings-panel/tab.html.twig
@@ -64,13 +64,15 @@
             form.text({
                 'id': 'guid-' ~ random(),
                 'label': 'Text',
+                'error': 'Please complete this field'
             })
         }}
 
         {{
             form.textarea({
                 'id': 'guid-' ~ random(),
-                'label': 'Textarea'
+                'label': 'Textarea',
+                'error': 'Please complete this field'
             })
         }}
 
@@ -78,6 +80,7 @@
             form.password({
                 'id': 'guid-' ~ random(),
                 'label': 'Password',
+                'error': 'Please complete this field'
             })
         }}
 
@@ -85,27 +88,31 @@
             form.date({
                 'id': 'guid-' ~ random(),
                 'label': 'Date',
+                'error': 'Please complete this field'
             })
         }}
 
         {{
             form.time({
                 'id': 'guid-' ~ random(),
-                'label': 'Time'
+                'label': 'Time',
+                'error': 'Please complete this field'
             })
         }}
 
         {{
             form.file({
                 'id': 'guid-' ~ random(),
-                'label': 'File'
+                'label': 'File',
+                'error': 'Please complete this field'
             })
         }}
 
         {{
             form.color({
                 'id': 'guid-' ~ random(),
-                'label': 'Color'
+                'label': 'Color',
+                'error': 'Please complete this field'
             })
         }}
 
@@ -113,6 +120,7 @@
             form.select({
                 'label': 'Select',
                 'id': 'guid-' ~ random(),
+                'error': 'Please complete this field',
                 'options': [
                     {
                         'label': 'Value one',
@@ -130,6 +138,7 @@
             form.select2({
                 'label': 'Select2',
                 'id': 'guid-' ~ random(),
+                'error': 'Please complete this field',
                 'options': [
                     {
                         'label': 'Value one',
@@ -149,7 +158,7 @@
                 'id': 'guid-' ~ random(),
                 'inputs': [
                     {
-                        
+
                         'label': 'Value',
                         'id': 'value-0',
                         'maxlength': '3',
@@ -290,7 +299,7 @@
                 'id': 'guid-' ~ random(),
                 'inputs': [
                     {
-                        
+
                         'label': 'Value',
                         'id': 'value-0',
                         'maxlength': '3',
@@ -492,6 +501,6 @@
                     })
                 ]
             })
-        }} 
+        }}
 
 {% endblock tab_content %}
