lexicon specific a11y fixes to reports and settings pattern pages

--- a/views/lexicon/patterns/settings-panel/tab.html.twig
+++ b/views/lexicon/patterns/settings-panel/tab.html.twig
@@ -58,7 +58,7 @@
 
     <div class="settings-section settings-section--stacked">
 
-        <h2>Section heading</h2>
+        {{ form.fieldset_start({ 'legend': 'Section heading' }) }}
 
         {{
             form.text({
@@ -83,6 +83,7 @@
 
         {{
             form.date({
+                'data-pulsar-datepicker': 'true',
                 'id': 'guid-' ~ random(),
                 'label': 'Date',
             })
@@ -151,14 +152,14 @@
                     {
                         
                         'label': 'Value',
-                        'id': 'value-0',
+                        'id': 'guid-' ~ random(),
                         'maxlength': '3',
                         'show-label': false,
                         'type': 'text'
                     },
                     {
                         'label': 'Unit of time',
-                        'id': 'unit-0',
+                        'id': 'guid-' ~ random(),
                         'show-label': false,
                         'type': 'select',
                         'options': [
@@ -224,6 +225,7 @@
 
         {{
             form.date({
+                'data-pulsar-datepicker': 'true',
                 'id': 'guid-' ~ random(),
                 'label': 'Date',
             })
@@ -292,14 +294,14 @@
                     {
                         
                         'label': 'Value',
-                        'id': 'value-0',
+                        'id': 'guid-' ~ random(),
                         'maxlength': '3',
                         'show-label': false,
                         'type': 'text'
                     },
                     {
                         'label': 'Unit of time',
-                        'id': 'unit-0',
+                        'id': 'guid-' ~ random(),
                         'show-label': false,
                         'type': 'select',
                         'options': [
