--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -385,6 +385,7 @@
         align-items: flex-start;
         display: table;
         display: flex;
+        flex-wrap: wrap; // to cater for presence of .tab__header
     }
 }
 
