Add tab header to sit above tab settings and tab content
Required for XFP Data Retention UI

--- a/stylesheets/_layout.settings.scss
+++ b/stylesheets/_layout.settings.scss
@@ -388,6 +388,7 @@
         align-items: flex-start;
         display: table;
         display: flex;
+        flex-wrap: wrap; // to cater for presence of .tab__header
     }
 }
 
