Various lexicon specific a11y fixes

--- a/views/lexicon/patterns/no-results/table.html.twig
+++ b/views/lexicon/patterns/no-results/table.html.twig
@@ -15,16 +15,16 @@
                 <th class="centered">CPUs</th>
                 <th>Actions</th>
             </tr>
+        </thead>
+        <tbody>
             <tr class="no-results">
                 <td id="no-results" class="no-results" colspan="10">
                     <div class="no-results__message">
                         <p>There are currently no things for this form</p>
                     </div>
-                    <a href="#" class="btn btn--primary js-create-rule no-results__action">Create Thing</a>
+                    <a href="#" class="btn btn--primary no-results__action">Create Thing</a>
                 </td>
             </tr>
-        </thead>
-        <tbody>
         </tbody>
     </table>
 
