--- a/views/lexicon/patterns/table-detail/table-detail-collapsing.html.twig
+++ b/views/lexicon/patterns/table-detail/table-detail-collapsing.html.twig
@@ -6,7 +6,8 @@
 {% endblock tab_sidebar %}
 
 {% block tab_content %}
-<table class="table datatable table--full" data-table-detail-table>
+<table class="table datatable table--full" data-table-detail-table data-overflow="collapse">
+    <caption class="hide">A list of case events</caption>
     <thead>
         <tr>
             <td><span class="hide">Table controls</span></td>
