Revert "Merge branch 'develop' into CMS/flatcap-july"
This reverts commit f2a302c7a4ba7f31eb2cb063348db978ffe838bb, reversing
changes made to 7b312656c40353b884b411c6ae7f6c6461add3c2.

--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -47,10 +47,6 @@
     min-height: 32px;
     user-select: none;
     -webkit-user-select: none;
-
-    .select2-search__field {
-        @include placeholder($input-color-placeholder);
-    }
 }
 
 .select2-container .select2-selection--multiple .select2-selection__rendered {
@@ -192,7 +188,7 @@
 }
 
 .select2-container--default .select2-selection--single .select2-selection__placeholder {
-    color: color(text, placeholder)
+    color: #999;
 }
 
 .select2-container--default .select2-selection__arrow {
@@ -224,10 +220,6 @@
 .select2-container--default.select2-container--disabled .select2-selection--single {
     background-color: #eee;
     cursor: default;
-
-    &:focus {
-        outline: none;
-    }
 }
 
 .select2-container--default.select2-container--disabled .select2-selection--single .select2-selection__clear {
@@ -255,7 +247,7 @@
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__placeholder {
-    color: color(text, placeholder);
+    color: #999;
     margin-top: 5px;
     float: left;
 }
@@ -348,10 +340,6 @@
 .select2-container--default.select2-container--disabled .select2-selection--multiple {
     background-color: #eee;
     cursor: default;
-
-    &:focus {
-        outline: none;
-    }
 }
 
 .select2-container--default.select2-container--disabled .select2-selection__choice__remove {
@@ -487,7 +475,7 @@
 }
 
 .select2-container--classic .select2-selection--single .select2-selection__placeholder {
-    color: color(text, placeholder);
+    color: #999;
 }
 
 .select2-container--classic .select2-selection--single .select2-selection__arrow {
