--- a/views/lexicon/patterns/settings-panel/index.html.twig
+++ b/views/lexicon/patterns/settings-panel/index.html.twig
@@ -13,6 +13,11 @@
             "label" : "Form responses",
             "src"   : tab_one,
             "active": true
+        },
+        {
+            "id"    : "log",
+            "label" : "Log",
+            "src"   : tab_one,
         }
     ]
 %}
