--- a/views/lexicon/tables/datatable-collapse.html.twig
+++ b/views/lexicon/tables/datatable-collapse.html.twig
@@ -229,9 +229,8 @@
     <pre><code tabindex="0" class="hljs">&#123;&#123;
     html.datatable(&#123;
         'data-order': '[[ 3, "desc" ]]',
-        'overflow': 'collapse',
         'data': data,
-        'caption': 'A list of films featuring Arnold Schwarzenegger'
+        'overflow': 'collapse'
     &#125;)
 &#125;&#125;</code></pre>
 {% endblock tab_sidebar %}
