--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -3,7 +3,7 @@
     position: relative;
 
     &::before {
-        background: color(gray, lightest);
+        background: #dedede;
         content: '';
         height: 85%;
         left: 55px;
@@ -17,15 +17,13 @@
         }
     }
 
-    .remove-button {
+    .remove__control {
+        border: 0;
+        color: color(text) !important;
         position: absolute;
-        right: 5px;
-        top: 5px;
-
-        @include respond-min($screen-tablet) {
-            top: 10px;
-            right: 10px;
-        }
+        text-decoration: none;
+        top: 10px;
+        right: 10px;
     }
 
     [href].conditional-block__link--when {
@@ -39,10 +37,6 @@
 
     [href].conditional-block__link--then {
         color: color(success, dark);
-    }
-
-    .rule-block__control {
-        vertical-align: top;
     }
 }
 
@@ -178,60 +172,29 @@
 
 .conditional-block--flush {
     margin: 24px 0 0 58px;
-    position: relative;
 
     @include respond-min($screen-tablet) {
         margin: 24px 0 0 68px;
     }
-
-    &::after {
-        color: color(gray, lightest);
-        content: '\f061';
-        font-family: 'FontAwesome';
-        font-size: $font-size-large;
-        left: 0;
-        position: absolute;
-        top: 7px;
-    }
-
-    .btn {
-        margin-left: 25px;
-    }
-
 }
 
 .conditional-block--indented {
     margin: 0 0 24px 75px;
     padding-top: 14px;
-    position: relative;
 
     @include respond-min($screen-tablet) {
         margin: 0 0 14px 80px;
     }
 
     &::before {
-        background: color(gray, lightest);
+        background: #dedede;
         content: '';
-        height: 30px;
+        height: 26px;
         left: 0;
         position: absolute;
         top: 0;
         width: 4px;
         z-index: 1;
-    }
-
-    .btn {
-        margin-left: 25px;
-    }
-
-    &::after {
-        color: color(gray, lightest);
-        content: '\f061';
-        font-family: 'FontAwesome';
-        font-size: 19px;
-        left: 0;
-        position: absolute;
-        top: 17px;
     }
 }
 
@@ -240,7 +203,7 @@
     font-size: 1.2em;
 
     i {
-        color: color(gray, lightest);
+        color: #dedede;
         display: inline-block;
         margin-right: 5px;
         text-decoration: none;
@@ -286,8 +249,7 @@ td.table__form .rules + .form__group:last-of-type {
     }
 }
 
-.rules__step.has-error,
-.rule-block-wrapper.has-error {
+.rules__step.has-error {
     .rule-block__header {
         background-color: $state-danger-bg;
         box-shadow: inset 4px 0 0 0 color(danger);
@@ -295,6 +257,14 @@ td.table__form .rules + .form__group:last-of-type {
 
     .rule-block__heading {
         color: color(danger, dark);
+    }
+
+    .help-block {
+        margin: 0 0 0 1em;
+    }
+
+    .help-block:last-of-type {
+        margin-bottom: .6em;
     }
 
     .is-error {
@@ -402,7 +372,7 @@ td.table__form .rules + .form__group:last-of-type {
         padding-bottom: 10px;
 
         &::after {
-            color: color(gray, lightest);
+            color: #dedede;
             content: '\f061';
             font-family: 'FontAwesome';
             font-size: 19px;
@@ -444,10 +414,6 @@ td.table__form .rules + .form__group:last-of-type {
 
         .btn {
             background-color: lighten($rule-color-or, 25);
-
-            &:focus {
-                background-color: color(background, focus);
-            }
         }
     }
 
@@ -477,10 +443,6 @@ td.table__form .rules + .form__group:last-of-type {
 
         .btn {
             background-color: lighten($rule-color-and, 20);
-
-            &:focus {
-                background-color: color(background, focus);
-            }
         }
     }
 
@@ -507,10 +469,6 @@ td.table__form .rules + .form__group:last-of-type {
             background-color: lighten($rule-color-if, 40);
             margin-left: 30px;
             min-width: 76px;
-
-            &:focus {
-                background-color: color(background, focus);
-            }
         }
     }
 
@@ -556,7 +514,6 @@ td.table__form .rules + .form__group:last-of-type {
     }
 
     .rule-block__heading {
-        font-weight: bold;
         padding: 0;
     }
 
@@ -601,14 +558,6 @@ td.table__form .rules + .form__group:last-of-type {
         .rule-block__header {
             border-top: 0;
         }
-
-        .remove-button i {
-            color: color(white) !important;
-
-            @include respond-min($screen-tablet) {
-                color: color(text) !important;
-            }
-        }
     }
 
     .rule-block--and {
@@ -620,6 +569,10 @@ td.table__form .rules + .form__group:last-of-type {
             background-color: $rule-color-and;
             color: color(black);
         }
+
+        .remove__control {
+            color: color(text);
+        }
     }
 
     .rule-block--or {
@@ -628,14 +581,6 @@ td.table__form .rules + .form__group:last-of-type {
 
         .rule-block__header {
             background-color: $rule-color-or;
-        }
-
-        .remove-button i {
-            color: color(white) !important;
-
-            @include respond-min($screen-tablet) {
-                color: color(text) !important;
-            }
         }
     }
 
@@ -694,11 +639,6 @@ td.table__form .rules + .form__group:last-of-type {
 
     .rule-block__controls {
         margin-top: .5em;
-
-        @include respond-min($screen-tablet) {
-            display: table-cell;
-            padding-top: .5em;
-        }
     }
 
     // Fix alignment when help-blocks are present
@@ -710,14 +650,18 @@ td.table__form .rules + .form__group:last-of-type {
         color: $rule-color-help;
     }
 
-    .remove-button {
+    .remove__control {
+        background: none;
+        border: 0;
+        color: color(white);
+        font-size: $font-size-large;
+        padding: 2px 6px;
         position: absolute;
-        right: 5px;
+        right: 2px;
         top: 5px;
 
         @include respond-min($screen-tablet) {
-            top: 10px;
-            right: 10px;
+            color: color(text);
         }
     }
 
