--- a/stylesheets/lexicon/lexicon.scss
+++ b/stylesheets/lexicon/lexicon.scss
@@ -17,6 +17,7 @@
 .lexicon-report-chart {
     border: 1px dashed #ccc;
     background-color: #efefef;
+    color: #ccc;
     line-height: 240px;
     text-align: center;
     width: 100%;
