--- a/views/pulsar/v2/helpers/html.html.twig
+++ b/views/pulsar/v2/helpers/html.html.twig
@@ -1039,7 +1039,7 @@ data-* | string | Data attributes, eg: `'data-foo': 'bar'`
 
         <span{{
             attributes(options
-                |exclude('label type message')
+                |exclude('label')
                 |defaults({
                     'class': 'loading'
                 })
