--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -5,7 +5,7 @@
 
 <nav role="navigation" class="nav-main" aria-label="primary" id="aria-main-nav">
     <div class="nav-primary t-nav-primary">
-        <a href="{{ options.brand_link|default('#') }}" class="jadu-branding" aria-label="Home">
+        <a href="{{ options.brand_link|default('#') }}" class="jadu-branding">
             <span class="jadu-logomark"><span class="hide">Return to home</span></span>
             <span class="jadu-wordmark">Jadu</span>
         </a>
