Fix broken lexicon page

--- a/views/lexicon/tabs/buttons_labels.html.twig
+++ b/views/lexicon/tabs/buttons_labels.html.twig
@@ -699,7 +699,8 @@
             	})
 
             }}
-        </p>
+        </div>
+    </p>
 
     <h2 class="heading">All the things!</h2>
     <p>
