--- a/stylesheets/_component.dropdowns.scss
+++ b/stylesheets/_component.dropdowns.scss
@@ -53,12 +53,13 @@
 
   // Dividers (basically an hr) within the dropdown
   .divider {
+    background-color: $dropdown-divider-bg;
     display: block;
     height: 1px;
     margin: ($line-height-base / 4) 0;
     min-width: 160px;
     overflow: hidden;
-    background-color: $dropdown-divider-bg;
+    padding: 0;
   }
 
   > li {
