--- a/stylesheets/_component.toolbar.scss
+++ b/stylesheets/_component.toolbar.scss
@@ -5,6 +5,10 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 12px 20px 0;
+
+    .main-title {
+        flex: 1 1 100%;
+    }
 }
 
 .toolbar-actions {
