Add AA compliant focus states to sign in UI buttons

--- a/stylesheets/_component.signin.scss
+++ b/stylesheets/_component.signin.scss
@@ -118,6 +118,12 @@ body {
 			top: 0;
 		}
 
+		&:focus {
+			background-color: color(background, focus);
+			border-color: color(black);
+			box-shadow: none;
+		}
+
 		&:active {
 			top: 1px;
 		}
