Add tab header block to settings lexicon example

--- a/views/lexicon/patterns/settings-panel/tab.html.twig
+++ b/views/lexicon/patterns/settings-panel/tab.html.twig
@@ -54,6 +54,10 @@
     }}
 {%- endblock -%}
 
+{% block tab_header %}
+    <p>tab header goes here</p>
+{% endblock tab_header %}
+
 {% block tab_settings %}
 
     <div class="settings-section settings-section--stacked">
