Lighten table form backgrounds to fix error contrast
Previous solve for this didn’t fix all instances, changing the background (as previously suggested) should fix all contrast state issues.

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -240,7 +240,7 @@ td.table__form {
 
 td.table__form,
 .table__form td {
-    background-color: color(background);
+    background-color: color(background, light);
 
     .help-block {
         color: color(text);
