--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -282,6 +282,11 @@ td.row__actions {
     th,
     td {
         white-space: nowrap;
+
+        // Maintain expected behaviour of flush inputs
+        .form__group--flush {
+            white-space: normal;
+        }
     }
 }
 
