--- a/stylesheets/_component.cards.scss
+++ b/stylesheets/_component.cards.scss
@@ -26,8 +26,11 @@
 }
 
 .card__title {
+    display: inline-block;
     font-family: $font-family-regular;
     font-size: $font-size-large;
+    line-height: 1em;
+    margin: 0 0 1em;
 }
 
 .card__body {
